--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
     "gulp-imagemin": "^6.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
@@ -22,8 +23,7 @@
   },
   "dependencies": {},
   "browserslist": [
-    "> 1%",
-    "not ie <= 9",
-    "last 2 versions"
+    "last 2 versions",
+    "> 2%"
   ]
 }
