--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "eg_icons",
-  "version": "1.0.0",
+  "name": "Bandeja",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "\u001b[A\u001b[Aamazing design\u001b[B\u001b[B"
   },
-  "author": "eg-icons",
+  "author": "Bandeja",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
